# ZK_Chess

./: Cargo.toml  README.md
chess_circuit/: Nargo.toml  Prover.toml
chess_circuit/src/: main.nr  test.nr
src/: chess.rs  gui.rs  main.rs  verify.rs
zk-chess-web/: package-lock.json  package.json  server.js
zk-chess-web/chess_circuit/: Nargo.toml
zk-chess-web/components/: ChessBoard.js  ChessBoard.jsx  ClearGames.js
zk-chess-web/pages/: index.js
zk-chess-web/pages/game/: [gameId].js
zk-chess-web/server/: gameStorage.js  games.json  index.js  socket.js  test-games.js
zk-chess-web/styles/: ChessBoard.module.css  ClearGames.module.css  Game.module.css  Home.module.css
zk-chess-web/utils/: gameState.js  zkProofs.js
